--- a/blog.html
+++ b/blog.html
@@ -221,6 +221,96 @@
 
     <div class="untree_co-section bg-light">
         <div class="container">
+            <div class="row justify-content-center mb-5">
+                <div class="col-lg-7 text-center" data-aos="fade-up" data-aos-delay="0">
+                    <h2 class="line-bottom text-center mb-4">School News</h2>
+                    <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there
+                        live the blind texts.</p>
+                </div>
+            </div>
+            <div class="row align-items-stretch">
+                <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
+                    <div class="media-h d-flex h-100">
+                        <figure>
+                            <img src="images/img-school-1-min.jpg" alt="Image">
+                        </figure>
+                        <div class="media-h-body">
+                            <h2 class="mb-3"><a href="#">Education for Tomorrow's Leaders</a></h2>
+                            <div class="meta mb-2"><span class="icon-calendar mr-2"></span><span>June 22, 2020</span>
+                                <span class="icon-person mr-2"></span>Admin
+                            </div>
+                            <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia,
+                                there live the blind texts.</p>
+                            <p><a href="#">Learn More</a></p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-6" data-aos="fade-up" data-aos-delay="200">
+                    <div class="media-h d-flex h-100">
+                        <figure>
+                            <img src="images/img-school-2-min.jpg" alt="Image">
+                        </figure>
+                        <div class="media-h-body">
+                            <h2 class="mb-3"><a href="#">Enroll Your Kids This Summer to get 30% off</a></h2>
+                            <div class="meta mb-2"><span class="icon-calendar mr-2"></span><span>June 22, 2020</span>
+                                <span class="icon-person mr-2"></span>Admin
+                            </div>
+                            <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia,
+                                there live the blind texts.</p>
+                            <p><a href="#">Learn More</a></p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div> <!-- /.untree_co-section -->
+
+    <div id="faqModal" class="faq-modal">
+        <div class="faq-content">
+            <span class="close-btn">&times;</span>
+            <h2>Frequently Asked Questions</h2>
+
+            <button class="accordion">What services does Mtendere Education Consult provide?</button>
+            <div class="panel">
+                <p>We assist students in securing international university placements, provide scholarship guidance,
+                    career consulting, and pre-departure orientation.</p>
+            </div>
+
+            <button class="accordion">How can I apply for a scholarship?</button>
+            <div class="panel">
+                <p>You can apply through our unified application portal. Make sure to upload all required documents such
+                    as transcripts, CV, and identification documents.</p>
+            </div>
+
+            <button class="accordion">What are the entry requirements for partner universities?</button>
+            <div class="panel">
+                <p>Entry requirements vary depending on the university and program. Generally, you’ll need academic
+                    transcripts, proof of English proficiency, and a valid passport.</p>
+            </div>
+
+            <button class="accordion">Can I apply to more than one university?</button>
+            <div class="panel">
+                <p>Yes. Our system allows you to choose and submit applications to multiple partner universities within
+                    a single form.</p>
+            </div>
+
+            <button class="accordion">When are the intakes?</button>
+            <div class="panel">
+                <p>Most of our universities offer intakes in January, July, and September. Check the specific university
+                    page for details.</p>
+            </div>
+
+            <button class="accordion">Is Mtendere Education Consult affiliated with universities?</button>
+            <div class="panel">
+                <p>Yes. We have official partnerships with reputable institutions like Chandigarh University, Parul
+                    University, Jain University, and more.</p>
+            </div>
+
+        </div>
+    </div>
+
+    <div class="untree_co-section bg-light">
+        <div class="container">
             <div class="row align-items-stretch">
                 <div class="col-lg-6 mb-4" data-aos="fade-up" data-aos-delay="100">
                     <div class="media-h d-flex h-100">
