--- a/contact.html
+++ b/contact.html
@@ -219,30 +219,84 @@
     </div>
     <!-- Header End -->
 
-    <div class="parallax section dbcolor">
-        <div class="container">
-            <div class="row logos">
-                <div class="col-md-2 col-sm-2 col-xs-6 wow fadeInUp">
-                    <a href="#"><img src="images/logo_01.png" alt="" class="img-repsonsive"></a>
+    <div class="container mt-12">
+        <h2 class="text-3xl font-bold text-center text-blue-800 mb-6">Success Stories</h2>
+        <div class="row">
+            <div class="col-12 col-sm-6 col-md-4 col-lg-4" data-aos="fade-up" data-aos-delay="100">
+                <div class="story-card bg-white p-6 rounded-xl shadow-lg text-center">
+                    <img src="path_to_image.jpg" alt="Student Image" class="w-full h-40 object-cover rounded-lg mb-4">
+                    <h3 class="text-xl font-semibold text-blue-700">Thoko's Journey to Success</h3>
+                    <p class="text-gray-600 mt-2">"Thanks to Mtendere Education Consult, I found the right scholarship
+                        in Germany, where I studied Engineering. My dream career is now a reality!"</p>
+                    <a href="#" class="text-blue-600 hover:underline mt-4 inline-block">Read Full Story</a>
                 </div>
-                <div class="col-md-2 col-sm-2 col-xs-6 wow fadeInUp">
-                    <a href="#"><img src="images/logo_02.png" alt="" class="img-repsonsive"></a>
+            </div>
+
+            <div class="col-12 col-sm-6 col-md-4 col-lg-4" data-aos="fade-up" data-aos-delay="200">
+                <div class="story-card bg-white p-6 rounded-xl shadow-lg text-center">
+                    <img src="path_to_image2.jpg" alt="Student Image" class="w-full h-40 object-cover rounded-lg mb-4">
+                    <h3 class="text-xl font-semibold text-blue-700">John's Path to a Medical Career</h3>
+                    <p class="text-gray-600 mt-2">"Mtendere guided me in securing a medical scholarship in the UK. I’m
+                        now pursuing my dream of becoming a doctor, and I couldn’t have done it without their help."</p>
+                    <a href="#" class="text-blue-600 hover:underline mt-4 inline-block">Read Full Story</a>
                 </div>
-                <div class="col-md-2 col-sm-2 col-xs-6 wow fadeInUp">
-                    <a href="#"><img src="images/logo_03.png" alt="" class="img-repsonsive"></a>
+            </div>
+
+            <div class="col-12 col-sm-6 col-md-4 col-lg-4" data-aos="fade-up" data-aos-delay="300">
+                <div class="story-card bg-white p-6 rounded-xl shadow-lg text-center">
+                    <img src="path_to_image3.jpg" alt="Student Image" class="w-full h-40 object-cover rounded-lg mb-4">
+                    <h3 class="text-xl font-semibold text-blue-700">Martha’s Success in Business Studies</h3>
+                    <p class="text-gray-600 mt-2">"With the help of Mtendere, I secured an internship in a top firm in
+                        the USA. Their support made my dreams of studying and working abroad come true!"</p>
+                    <a href="#" class="text-blue-600 hover:underline mt-4 inline-block">Read Full Story</a>
                 </div>
-                <div class="col-md-2 col-sm-2 col-xs-6 wow fadeInUp">
-                    <a href="#"><img src="images/logo_04.png" alt="" class="img-repsonsive"></a>
-                </div>
-                <div class="col-md-2 col-sm-2 col-xs-6 wow fadeInUp">
-                    <a href="#"><img src="images/logo_05.png" alt="" class="img-repsonsive"></a>
-                </div>
-                <div class="col-md-2 col-sm-2 col-xs-6 wow fadeInUp">
-                    <a href="#"><img src="images/logo_06.png" alt="" class="img-repsonsive"></a>
-                </div>
-            </div><!-- end row -->
-        </div><!-- end container -->
-    </div><!-- end section -->
+            </div>
+        </div>
+    </div>
+
+    <div id="faqModal" class="faq-modal">
+        <div class="faq-content">
+            <span class="close-btn">&times;</span>
+            <h2>Frequently Asked Questions</h2>
+
+            <button class="accordion">What services does Mtendere Education Consult provide?</button>
+            <div class="panel">
+                <p>We assist students in securing international university placements, provide scholarship guidance,
+                    career consulting, and pre-departure orientation.</p>
+            </div>
+
+            <button class="accordion">How can I apply for a scholarship?</button>
+            <div class="panel">
+                <p>You can apply through our unified application portal. Make sure to upload all required documents such
+                    as transcripts, CV, and identification documents.</p>
+            </div>
+
+            <button class="accordion">What are the entry requirements for partner universities?</button>
+            <div class="panel">
+                <p>Entry requirements vary depending on the university and program. Generally, you’ll need academic
+                    transcripts, proof of English proficiency, and a valid passport.</p>
+            </div>
+
+            <button class="accordion">Can I apply to more than one university?</button>
+            <div class="panel">
+                <p>Yes. Our system allows you to choose and submit applications to multiple partner universities within
+                    a single form.</p>
+            </div>
+
+            <button class="accordion">When are the intakes?</button>
+            <div class="panel">
+                <p>Most of our universities offer intakes in January, July, and September. Check the specific university
+                    page for details.</p>
+            </div>
+
+            <button class="accordion">Is Mtendere Education Consult affiliated with universities?</button>
+            <div class="panel">
+                <p>Yes. We have official partnerships with reputable institutions like Chandigarh University, Parul
+                    University, Jain University, and more.</p>
+            </div>
+
+        </div>
+    </div>
 
     <div class="untree_co-section">
         <div class="container">
