--- a/course.html
+++ b/course.html
@@ -219,6 +219,140 @@
     </div>
     <!-- Header End -->
 
+    <div class="untree_co-section">
+        <div class="container">
+            <div class="row justify-content-center mb-5">
+                <div class="col-lg-7 text-center" data-aos="fade-up" data-aos-delay="0">
+                    <h2 class="line-bottom text-center mb-4">Study Programs</h2>
+                    <p>Each student’s academic path is unique, and we’re here to guide you to the best-fit program that
+                        suits your passion and career aspirations. By offering personalized consultations, access to the
+                        latest scholarship opportunities, and a wide network of global universities, we ensure that you
+                        can make an informed decision to pursue your dream program abroad.
+
+                        If you're unsure about which area of study best fits your career goals, our dedicated team of
+                        educational consultants is here to help you discover your true calling.</p>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-6 col-sm-6 col-md-6 col-lg-4" data-aos="fade-up" data-aos-delay="100">
+                    <div class="feature text-center">
+                        <span class="uil uil-cogs" style="font-size: 40px; color: #4A90E2;"></span>
+                        <h3>Engineering & Technology</h3>
+                        <p>From Civil Engineering to Artificial Intelligence, explore diverse opportunities in the
+                            tech-driven world.</p>
+                    </div>
+                </div>
+
+                <div class="col-6 col-sm-6 col-md-6 col-lg-4" data-aos="fade-up" data-aos-delay="200">
+                    <div class="feature text-center">
+                        <span class="uil uil-business" style="font-size: 40px; color: #E94E77;"></span>
+                        <h3>Business & Management</h3>
+                        <p>Discover paths in Finance, Marketing, International Business, and more for global leadership
+                            roles.</p>
+                    </div>
+                </div>
+
+                <div class="col-6 col-sm-6 col-md-6 col-lg-4" data-aos="fade-up" data-aos-delay="300">
+                    <div class="feature text-center">
+                        <span class="uil uil-heart" style="font-size: 40px; color: #F4A300;"></span>
+                        <h3>Health & Medical Sciences</h3>
+                        <p>Pursue a career in Medicine, Public Health, Pharmacy, and help improve global health
+                            outcomes.</p>
+                    </div>
+                </div>
+
+                <div class="col-6 col-sm-6 col-md-6 col-lg-4" data-aos="fade-up" data-aos-delay="400">
+                    <div class="feature text-center">
+                        <span class="uil uil-book-reader" style="font-size: 40px; color: #2A9D8F;"></span>
+                        <h3>Arts & Humanities</h3>
+                        <p>Study disciplines from Literature to Philosophy and shape global cultural and social
+                            movements.</p>
+                    </div>
+                </div>
+
+                <div class="col-6 col-sm-6 col-md-6 col-lg-4" data-aos="fade-up" data-aos-delay="500">
+                    <div class="feature text-center">
+                        <span class="uil uil-brain" style="font-size: 40px; color: #F1C40F;"></span>
+                        <h3>Science & Research</h3>
+                        <p>Engage in groundbreaking studies in Biology, Chemistry, Environmental Science, and more.</p>
+                    </div>
+                </div>
+
+                <div class="col-6 col-sm-6 col-md-6 col-lg-4" data-aos="fade-up" data-aos-delay="600">
+                    <div class="feature text-center">
+                        <span class="uil uil-gavel" style="font-size: 40px; color: #9B59B6;"></span>
+                        <h3>Law & Governance</h3>
+                        <p>Study law, governance, and public policy to create positive societal and legal change.</p>
+                    </div>
+                </div>
+
+                <div class="col-6 col-sm-6 col-md-6 col-lg-4" data-aos="fade-up" data-aos-delay="700">
+                    <div class="feature text-center">
+                        <span class="uil uil-airplane" style="font-size: 40px; color: #1ABC9C;"></span>
+                        <h3>Hospitality & Tourism</h3>
+                        <p>Build your career in tourism, hospitality management, and event planning in the global
+                            market.</p>
+                    </div>
+                </div>
+
+                <div class="col-6 col-sm-6 col-md-6 col-lg-4" data-aos="fade-up" data-aos-delay="800">
+                    <div class="feature text-center">
+                        <span class="uil uil-tractor" style="font-size: 40px; color: #E67E22;"></span>
+                        <h3>Agriculture & Food Sciences</h3>
+                        <p>Focus on sustainable agriculture, food safety, and animal science to create global food
+                            security.</p>
+                    </div>
+                </div>
+            </div>
+
+
+        </div> <!-- /.container -->
+    </div> <!-- /.untree_co-section -->
+
+    <div id="faqModal" class="faq-modal">
+        <div class="faq-content">
+            <span class="close-btn">&times;</span>
+            <h2>Frequently Asked Questions</h2>
+
+            <button class="accordion">What services does Mtendere Education Consult provide?</button>
+            <div class="panel">
+                <p>We assist students in securing international university placements, provide scholarship guidance,
+                    career consulting, and pre-departure orientation.</p>
+            </div>
+
+            <button class="accordion">How can I apply for a scholarship?</button>
+            <div class="panel">
+                <p>You can apply through our unified application portal. Make sure to upload all required documents such
+                    as transcripts, CV, and identification documents.</p>
+            </div>
+
+            <button class="accordion">What are the entry requirements for partner universities?</button>
+            <div class="panel">
+                <p>Entry requirements vary depending on the university and program. Generally, you’ll need academic
+                    transcripts, proof of English proficiency, and a valid passport.</p>
+            </div>
+
+            <button class="accordion">Can I apply to more than one university?</button>
+            <div class="panel">
+                <p>Yes. Our system allows you to choose and submit applications to multiple partner universities within
+                    a single form.</p>
+            </div>
+
+            <button class="accordion">When are the intakes?</button>
+            <div class="panel">
+                <p>Most of our universities offer intakes in January, July, and September. Check the specific university
+                    page for details.</p>
+            </div>
+
+            <button class="accordion">Is Mtendere Education Consult affiliated with universities?</button>
+            <div class="panel">
+                <p>Yes. We have official partnerships with reputable institutions like Chandigarh University, Parul
+                    University, Jain University, and more.</p>
+            </div>
+
+        </div>
+    </div>
+
     <!-- Courses Start -->
     <div class="container-fluid py-5">
         <div class="container py-5">
