--- a/gallery.html
+++ b/gallery.html
@@ -219,6 +219,50 @@
     </div>
     <!-- Header End -->
 
+    <div id="faqModal" class="faq-modal">
+        <div class="faq-content">
+            <span class="close-btn">&times;</span>
+            <h2>Frequently Asked Questions</h2>
+
+            <button class="accordion">What services does Mtendere Education Consult provide?</button>
+            <div class="panel">
+                <p>We assist students in securing international university placements, provide scholarship guidance,
+                    career consulting, and pre-departure orientation.</p>
+            </div>
+
+            <button class="accordion">How can I apply for a scholarship?</button>
+            <div class="panel">
+                <p>You can apply through our unified application portal. Make sure to upload all required documents such
+                    as transcripts, CV, and identification documents.</p>
+            </div>
+
+            <button class="accordion">What are the entry requirements for partner universities?</button>
+            <div class="panel">
+                <p>Entry requirements vary depending on the university and program. Generally, you’ll need academic
+                    transcripts, proof of English proficiency, and a valid passport.</p>
+            </div>
+
+            <button class="accordion">Can I apply to more than one university?</button>
+            <div class="panel">
+                <p>Yes. Our system allows you to choose and submit applications to multiple partner universities within
+                    a single form.</p>
+            </div>
+
+            <button class="accordion">When are the intakes?</button>
+            <div class="panel">
+                <p>Most of our universities offer intakes in January, July, and September. Check the specific university
+                    page for details.</p>
+            </div>
+
+            <button class="accordion">Is Mtendere Education Consult affiliated with universities?</button>
+            <div class="panel">
+                <p>Yes. We have official partnerships with reputable institutions like Chandigarh University, Parul
+                    University, Jain University, and more.</p>
+            </div>
+
+        </div>
+    </div>
+
     <!-- Portfolio Start -->
     <div class="container-fluid py-5">
         <div class="container pt-5 pb-3">
