--- a/index.html
+++ b/index.html
@@ -58,46 +58,59 @@
     </div>
 
     <nav class="site-nav mb-5">
-        <div class="pb-2 top-bar mb-3">
-            <div class="container">
-                <div class="row align-items-center">
-
-                    <div class="col-6 col-lg-9">
-                        <a class="small mr-3"><span class="icon-question-circle-o mr-2"></span>
-                            <span id="faqBtn" class="d-lg-inline-block">Have a questions?</span></a>
-                        <a href="#"
-                            class="small mr-3"><span class="icon-phone mr-2"></span> <span
-                            class="d-none d-lg-inline-block">
-
-                        </span></a>
-                        <a href="#" class="small mr-3"><span class="icon-envelope mr-2"></span> <span
-                                class="d-none d-lg-inline-block">mtendereeducationconsult@gmail.com</span></a>
-                    </div>
-
-                    <!-- Language Selector -->
-                    <div class="col-6 text-center">
-                        <select class="form-select small mr-3"" id=" language-select">
-                            <option value="en">English</option>
-                            <option value="es">Español</option>
-                            <option value="fr">Français</option>
-                            <!-- Add more languages here -->
-                        </select>
-                    </div>
-
-                    <div class="col-6 col-lg-3 text-right">
-                        <a href="login.html" class="small mr-3">
-                            <span class="icon-lock"></span>
-                            Log In
-                        </a>
-                        <a href="register.html" class="small">
-                            <span class="icon-person"></span>
-                            Register
-                        </a>
-                    </div>
-
+        <!-- Top Bar -->
+    <div style="background-color: #103f5e; color: white; padding: 10px 20px; display: flex; justify-content: space-between; align-items: center;">
+        <div>Have a question? <strong>mtendereeducationconsult@gmail.com</strong></div>
+        <div>
+        <select style="margin-right: 15px; padding: 5px;">
+            <option>English</option>
+        </select>
+        <a href="#" onclick="togglePopup(false)" style="color: white; margin-right: 10px;">Log In</a>
+        <a href="#" onclick="togglePopup(true)" style="color: white;">Register</a>
+        </div>
+    </div>
+    
+    <!-- Popup Overlay -->
+    <div id="popupContainer" class="popup-overlay" style="display: none;">
+        <div class="popup-box">
+        <div class="flip-card" id="flipCard">
+            <!-- LOGIN FORM -->
+            <div class="flip-face front">
+            <h2>Login</h2>
+            <form action="login.php" method="POST">
+                <input type="text" name="username" placeholder="Username" required>
+                <input type="password" name="password" placeholder="Password" required>
+                <div class="g-recaptcha" data-sitekey="YOUR_RECAPTCHA_SITE_KEY"></div>
+                <button type="submit">Login</button>
+                <div class="social-login">
+                <button type="button" class="google">Login with Google</button>
+                <button type="button" class="facebook">Login with Facebook</button>
+                <button type="button" class="twitter">Login with Twitter</button>
                 </div>
+                <p onclick="flipCard()" class="switch-text">Don’t have an account? Register</p>
+            </form>
+            </div>
+            <!-- REGISTER FORM -->
+            <div class="flip-face back">
+            <h2>Register</h2>
+            <form action="register.php" method="POST">
+                <input type="text" name="username" placeholder="Username" required>
+                <input type="email" name="email" placeholder="Email" required>
+                <input type="password" name="password" placeholder="Password" required>
+                <div class="g-recaptcha" data-sitekey="YOUR_RECAPTCHA_SITE_KEY"></div>
+                <button type="submit">Register</button>
+                <div class="social-login">
+                <button type="button" class="google">Register with Google</button>
+                <button type="button" class="facebook">Register with Facebook</button>
+                <button type="button" class="twitter">Register with Twitter</button>
+                </div>
+                <p onclick="flipCard()" class="switch-text">Already have an account? Login</p>
+            </form>
             </div>
         </div>
+        <span class="popup-close" onclick="closePopup()">×</span>
+        </div>
+    </div>
         <div class="sticky-nav js-sticky-header">
             <div class="container position-relative">
                 <div class="site-navigation text-center">
