--- a/index.html
+++ b/index.html
@@ -65,17 +65,17 @@
                     <div class="col-6 col-lg-9">
                         <a class="small mr-3"><span class="icon-question-circle-o mr-2"></span>
                             <span id="faqBtn" class="d-lg-inline-block">Have a questions?</span></a>
-                        <a href="#" class="small mr-3"><span class="icon-phone mr-2"></span> <span
+                        <a href="#" class="small mr-3"><i class="fa fa-phone" aria-hidden="true"></i>> <span
                                 class="d-none d-lg-inline-block">
 
                             </span></a>
-                        <a href="#" class="small mr-3"><span class="icon-envelope mr-2"></span> <span
+                        <a href="#" class="small mr-3"><i class="fa fa-envelope" aria-hidden="true"></i> <span
                                 class="d-none d-lg-inline-block">mtendereeducationconsult@gmail.com</span></a>
                     </div>
 
                     <!-- Language Selector -->
-                    <div class="col-6 text-center">
-                        <select class="form-select small mr-3"" id=" language-select">
+                    <div class="col-6 col-lg-9">
+                        <select class="form-select small mr-3"" id="language-select">
                             <option value="en">English</option>
                             <option value="es">Español</option>
                             <option value="fr">Français</option>
@@ -103,7 +103,6 @@
                     <a href="index.html" class="logo menu-absolute m-0">
                         <img src="img/Mtendere_logo.png" alt="Image" class="img-fluid">
                     </a>
-
                     <ul class="js-clone-nav d-none d-lg-inline-block site-menu">
                         <li class="active"><a href="index.html">Home</a></li>
                         <li><a href="course.html">Scholarships</a></li>
