--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                     <div class="col-6 col-lg-9">
                         <a class="small mr-3"><span class="icon-question-circle-o mr-2"></span>
                             <span id="faqBtn" class="d-lg-inline-block">Have a questions?</span></a>
-                        <a href="#" class="small mr-3"><i class="fa fa-phone" aria-hidden="true"></i>> <span
+                        <a href="#" class="small mr-3"><i class="fa fa-phone" aria-hidden="true"></i><span
                                 class="d-none d-lg-inline-block">
 
                             </span></a>
@@ -74,7 +74,7 @@
                     </div>
 
                     <!-- Language Selector -->
-                    <div class="col-6 col-lg-9">
+                    <div class="d-lg-inline-block">
                         <select class="form-select small mr-3"" id="language-select">
                             <option value="en">English</option>
                             <option value="es">Español</option>
@@ -88,7 +88,7 @@
                             <span class="icon-lock"></span>
                             Log In
                         </a>
-                        <a id="faqBtn" class="small">
+                        <a id="faqBtn" class="small mr-3">
                             <span class="icon-person"></span>
                             Register
                         </a>
