--- a/index.html
+++ b/index.html
@@ -620,7 +620,7 @@
 
             <form id="applicationForm">
                 <label for="university">Select University</label>
-                <select id="university" name="university" required>
+                <select id="universitySelect" name="university" required>
                     <option value="">-- Choose a University --</option>
                     <option value="chandigarh">Chandigarh University</option>
                     <option value="parul">Parul University</option>
