--- a/index.html
+++ b/index.html
@@ -442,7 +442,7 @@
     </div>
 
     <!-- Popup Overlay -->
-    <div id="popupContainer" class="popup-overlay" style="display: none;">
+    <div id="popupContainer" class="popup-overlay" onclick="popup">
         <div class="popup-box">
             <div class="flip-card" id="flipCard">
                 <!-- LOGIN FORM -->
