--- a/about.html
+++ b/about.html
@@ -174,11 +174,11 @@
     <div class="container">
       <div class="row align-items-center justify-content-center">
         <div class="container text-center py-5">
-          <h1 class="text-white display-1">Courses</h1>
+          <h1 class="text-white display-1">ABOUT US</h1>
           <div class="d-inline-flex text-white mb-5">
-            <p class="m-0 text-uppercase"><a class="text-white" href="">Home</a></p>
+            <p class="m-0 text-uppercase"><a class="text-white" href="index.html">Home</a></p>
             <i class="fa fa-angle-double-right pt-1 px-3"></i>
-            <p class="m-0 text-uppercase">Courses</p>
+            <p class="m-0 text-uppercase">About</p>
           </div>
         </div>
         <div class="mx-auto mb-5" style="width: 100%; max-width: 600px;">
@@ -199,23 +199,23 @@
           </div>
         </div>
       </div>
-
-      <!-- Results -->
-      <div class="row justify-content-center" id="searchResults">
-        <!-- Results Display -->
-        <section id="search-results" class="py-5 bg-light">
-          <div class="container">
-            <h2 class="text-center mb-4">Matching Programs</h2>
-            <div id="resultsContainer" class="row justify-content-center">
-              <!-- Results will appear here -->
-
-            </div>
-          </div>
-        </section>
-      </div>
     </div>
   </div>
   <!-- Header End -->
+
+  <!-- Results -->
+  <div class="row justify-content-center" id="searchResults">
+    <!-- Results Display -->
+    <section id="search-results" class="py-5 bg-light">
+      <div class="container">
+        <h2 class="text-center mb-4">Matching Programs</h2>
+        <div id="resultsContainer" class="row justify-content-center">
+          <!-- Results will appear here -->
+
+        </div>
+      </div>
+    </section>
+  </div>
 
   <div class="untree_co-section">
     <div class="container">
