--- a/blog.html
+++ b/blog.html
@@ -332,7 +332,7 @@
                             <img src="images/img-school-3-min.jpg" alt="Image">
                         </figure>
                         <div class="media-h-body">
-                            <h2 class="mb-3"><a href="#">Enroll Your Kids This Summer to get 30% off</a></h2>
+                            <h2 class="mb-3"><a href="blog-details.html">Enroll Your Kids This Summer to get 30% off</a></h2>
                             <div class="meta "><span class="icon-calendar mr-2"></span><span>June 22, 2020</span> <span
                                     class="icon-person mr-2"></span>Untree.co</div>
                             <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia,
@@ -347,7 +347,7 @@
                             <img src="images/img-school-2-min.jpg" alt="Image">
                         </figure>
                         <div class="media-h-body">
-                            <h2 class="mb-3"><a href="#">Education for Tomorrow's Leaders</a></h2>
+                            <h2 class="mb-3"><a href="blog-details.html">Education for Tomorrow's Leaders</a></h2>
                             <div class="meta "><span class="icon-calendar mr-2"></span><span>June 22, 2020</span> <span
                                     class="icon-person mr-2"></span>Untree.co</div>
                             <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia,
@@ -361,7 +361,7 @@
                             <img src="images/img-school-1-min.jpg" alt="Image">
                         </figure>
                         <div class="media-h-body">
-                            <h2 class="mb-3"><a href="#">Enroll Your Kids This Summer to get 30% off</a></h2>
+                            <h2 class="mb-3"><a href="blog-details.html">Enroll Your Kids This Summer to get 30% off</a></h2>
                             <div class="meta "><span class="icon-calendar mr-2"></span><span>June 22, 2020</span> <span
                                     class="icon-person mr-2"></span>Untree.co</div>
                             <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia,
@@ -377,7 +377,7 @@
                             <img src="images/img-school-5-min.jpg" alt="Image">
                         </figure>
                         <div class="media-h-body">
-                            <h2 class="mb-3"><a href="#">Education for Tomorrow's Leaders</a></h2>
+                            <h2 class="mb-3"><a href="blog-details.html">Education for Tomorrow's Leaders</a></h2>
                             <div class="meta "><span class="icon-calendar mr-2"></span><span>June 22, 2020</span> <span
                                     class="icon-person mr-2"></span>Untree.co</div>
                             <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia,
