--- a/index.html
+++ b/index.html
@@ -324,6 +324,26 @@
         </div>
     </div>
 
+    <!-- Enquire Now Form -->
+    <div class="enquire-now" id="enquireForm">
+        <h5><i class="bi bi-chat-dots"></i> Enquire Now</h5>
+        <form action="sendmail.php" method="POST">
+            <div class="form-group">
+                <label for="name"><i class="bi bi-person"></i> Name</label>
+                <input type="text" name="name" class="form-control" required>
+            </div>
+            <div class="form-group">
+                <label for="email"><i class="bi bi-envelope"></i> Email</label>
+                <input type="email" name="email" class="form-control" required>
+            </div>
+            <div class="form-group">
+                <label for="message"><i class="bi bi-pencil"></i> Message</label>
+                <textarea name="message" class="form-control" rows="3"></textarea>
+            </div>
+            <button type="submit" class="btn btn-light btn-block"><i class="bi bi-send"></i> Submit</button>
+        </form>
+    </div>
+
     <!-- Course Finder Section -->
     <div class="container my-4">
         <h4>Find Your Course</h4>
